--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Angular</title>
+  </head>
+  <body>
+    <my-app>loading</my-app>
+  </body>
+</html>
