--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Angular</title>
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<body class="mat-typography">
     <my-app>loading</my-app>
-  </body>
+</body>
+
 </html>
